<resources>
    <string name="app_name">kapsamazing-app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Code</string>
    <string name="title_notifications">Profile</string>
    <string name="title_code">Code</string>
    <string name="title_profile">Profile</string>
    <string name="kapsalons">Kapsalons</string>
    <string name="search_hint_home">City, restaurant, ...</string>
    <string name="pickup">Pickup</string>
    <string name="delivered">Delivered</string>
    <string name="register_kapsalon">Register new kapsalon</string>
    <string name="enter_code">Enter code here</string>
    <string name="enter_code_description">Fill in the code of your meal to rate your kapsalon!</string>
    <string name="register">Register</string>
    <string name="rated_kapsalons">My rated kapsalons</string>
    <string name="order">Order</string>
    <string name="fries">Fries</string>
    <string name="meat">Meat</string>
    <string name="toppings">Toppings</string>
    <string name="submit">Submit</string>
</resources>