<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingActivity">

  <TextView
      android:id="@+id/ratingTitleText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:text="TextView"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginStart="32px"
      android:layout_marginEnd="32px"
      android:layout_marginTop="32px"
      android:gravity="center"
      android:textSize="24sp"
      android:textColor="@color/brown"/>

  <ImageView
      android:id="@+id/ratingImage"
      android:layout_width="175dp"
      android:layout_height="175dp"
      android:layout_marginStart="32px"
      android:layout_marginTop="64px"
      android:scaleType="centerInside"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ratingTitleText"
      app:srcCompat="@drawable/ic_baseline_image_24" />

  <TextView
      android:id="@+id/ratingScoreTitleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Scores"
      app:layout_constraintTop_toTopOf="@+id/ratingImage"
      app:layout_constraintStart_toEndOf="@id/ratingImage"
      android:layout_marginStart="32px"
      android:textColor="@color/red"
      android:textSize="18sp"/>

  <TextView
      android:id="@+id/ratingFriesText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/fries"
      app:layout_constraintTop_toBottomOf="@+id/ratingScoreTitleText"
      app:layout_constraintStart_toEndOf="@+id/ratingImage"
      android:layout_marginStart="32px"
      android:layout_marginTop="32px"
      android:textColor="@color/brown"/>

  <TextView
      android:id="@+id/ratingFriesScore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="3.0/5"
      app:layout_constraintTop_toBottomOf="@+id/ratingScoreTitleText"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="32px"
      android:layout_marginTop="32px"
      android:textColor="@color/red"/>

  <TextView
      android:id="@+id/ratingMeatText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/meat"
      app:layout_constraintTop_toBottomOf="@+id/seekBarFries"
      app:layout_constraintStart_toEndOf="@+id/ratingImage"
      android:layout_marginStart="32px"
      android:layout_marginTop="32px"
      android:textColor="@color/brown"/>

  <TextView
      android:id="@+id/ratingMeatScore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="3.0/5"
      app:layout_constraintTop_toBottomOf="@+id/seekBarFries"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="32px"
      android:layout_marginTop="32px"
      android:textColor="@color/red"/>

  <TextView
      android:id="@+id/ratingToppingsText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/toppings"
      app:layout_constraintTop_toBottomOf="@+id/seekBarMeat"
      app:layout_constraintStart_toEndOf="@+id/ratingImage"
      android:layout_marginStart="32px"
      android:layout_marginTop="32px"
      android:textColor="@color/brown"/>

  <TextView
      android:id="@+id/ratingToppingsScore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="3.0/5"
      app:layout_constraintTop_toBottomOf="@+id/seekBarMeat"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="32px"
      android:layout_marginTop="32px"
      android:textColor="@color/red"/>


  <SeekBar
      android:id="@+id/seekBarFries"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ratingFriesText"
      android:thumbTint="@color/red"
      android:progressTint="@color/brown"
      android:max="10"
      android:progress="6"
      android:layout_marginTop="32px"/>

  <SeekBar
      android:id="@+id/seekBarMeat"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ratingMeatText"
      android:thumbTint="@color/red"
      android:progressTint="@color/brown"
      android:max="10"
      android:progress="6"
      android:layout_marginTop="32px"/>

  <SeekBar
      android:id="@+id/seekBarToppings"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ratingToppingsText"
      android:thumbTint="@color/red"
      android:progressTint="@color/brown"
      android:max="10"
      android:progress="6"
      android:layout_marginTop="32px"/>


  <Button
      android:id="@+id/submitRatingButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/submit"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/seekBarToppings"
      android:layout_marginEnd="32px"
      android:layout_marginTop="32px"/>


</androidx.constraintlayout.widget.ConstraintLayout>